created and updated tests for one to many implementation